# saturated-flow-thesis

./: .gitignore  README.md  coverage_evaluation.ipynb
notebooks/: ca_size_charts.ipynb  ca_size_comparison_charts.ipynb  coverage_charts.ipynb  coverage_comparison_charts.ipynb
parallel_CUDA_imp/: heads_ca.txt
parallel_CUDA_imp/src/: gpu_active_cell.cu  gpu_active_cell_const_block_number.cu  gpu_loop_active_cell.cu  memory_global.cu  memory_global_loop.cu  memory_shared.cu  parallel_CUDA_imp.cu  params.h  run_tests.sh
parallel_CUDA_imp/tests/: cuda_test  (+4 more)
parallel_OpenCAL_imp/: CMakeLists.txt  Theis.cpp  cal_saturatedFlow_oneWell.c  cal_saturedFlow_oneWell.c  conversioneOutputModFlowInMatrice.cpp  gnuplotcommand.txt
parallel_OpenCAL_imp/source/: params.h
sequential_c_imp/: CMakeLists.txt  heads_ca.txt  main.c  sequential_c_imp.c
sequential_python_imp/: heads_with_wr_cas.txt  main.py
src/: CMakeLists.txt  params.h
src/parallel/active_cells/: active_cells.cu  active_cells_common.h  active_cells_cpu.cu  active_cells_gpu.cu  active_cells_loop.cu  utils.cu
src/parallel/active_cells/global/: g_ac_standard.cu  g_ac_standard_loop.cu  g_common.cu  global_active_cells.cu  global_active_cells_loop.cu
src/parallel/active_cells/global_memory/atomic/: common.cu
src/parallel/active_cells/global_memory/finding_kernel/: common.cu
src/parallel/active_cells/global_memory/finding_kernel_1d/: ac_standard_stress.cu  common.cu
src/parallel/active_cells/global_memory/naive/: common.cu
src/parallel/active_cells/global_memory/sc/: common.cu
src/parallel/active_cells/global_memory/sc_adaptive/: common.cu
src/parallel/active_cells/global_memory/sc_finding_kernel/: common.cu
src/parallel/active_cells/naive/: main.cu
src/parallel/active_cells/naive/variants/: g_ac_standard.cu
src/parallel/active_cells/sc/: main.cu  utils.cu
src/parallel/active_cells/sc/variants/: u_ac_adaptive.cu
src/parallel/active_cells/unified/: active_cells.cu  active_cells_common.h  active_cells_loop.cu  u_ac_standard_loop.cu  u_common.cu  unified_active_cells.cu  unified_active_cells_loop.cu
src/parallel/active_cells/unified_atomic/: u_common.cu
src/parallel/active_cells/unified_memory/atomic/: common.cu
src/parallel/active_cells/unified_memory/finding_kernel/: common.cu
src/parallel/active_cells/unified_memory/finding_kernel_1d/: ac_standard.cu  common.cu
src/parallel/active_cells/unified_memory/naive/: common.cu  g_ac_standard.cu  g_ac_standard_stress.cu
src/parallel/active_cells/unified_memory/sc/: ac_adaptive.cu  ac_adaptive_stress.cu  common.cu  g_ac_adaptive.cu  g_ac_adaptive_stress.cu  g_ac_standard.cu
src/parallel/active_cells/unified_memory/sc_adaptive/: common.cu
src/parallel/active_cells/unified_memory/sc_finding_kernel/: common.cu
src/parallel/active_cells/unified_naive/: u_common.cu
src/parallel/active_cells/unified_one_kernel/: u_ac_standard.cu  u_common.cu
src/parallel/active_cells/unified_sc/: u_common.cu
src/parallel/active_cells/unified_sc_one_kernel_adaptive/: u_common.cu
src/parallel/active_cells/unified_threshold/: u_common.cu
src/parallel/active_cells_impl/: utils.cu
src/parallel/active_cells_impl/naive/: main.cu
src/parallel/active_cells_impl/naive/variants/: g_ac_standard_stress.cu  u_ac_standard.cu
src/parallel/active_cells_impl/sc/: main.cu  utils.cu
src/parallel/active_cells_impl/sc/variants/: g_ac_adaptive.cu  g_ac_adaptive_stress.cu  g_ac_standard.cu  u_ac_adaptive_naive.cu  u_ac_adaptive_stress.cu
src/parallel/common/: cuda_error_check.cu  cuda_error_check.cuh  file_helper.cpp  file_helper.h  memory_management.cu  memory_management.cuh  statistics.c  statistics.cpp  statistics.h  timer.c  timer.cpp  timer.h  unified_memory_management.cu  unified_memory_management.cuh  write_heads_to_file.c
src/parallel/global_memory/: common.cu  g_common.cu  g_hybrid.cu  g_hybrid_stress.cu  g_shared.cu  g_shared_stress.cu  g_standard.cu  g_standard_loop.cu  global_active_cells.cu  global_memory.cu  global_memory_common.h  global_memory_loop.cu  hybrid.cu  hybrid_loop.cu  shared.cu  shared_loop.cu  standard.cu  standard_loop.cu
src/parallel/hybrid_memory/: hybrid_memory.cu  hybrid_memory_loop.cu
src/parallel/kernels/: ac_kernels.cu  dummy_kernels.cu  iteration_step.cu  iteration_step.cuh  transition_kernels.cu  utils.cu
src/parallel/memory_impl/: main.cu
src/parallel/memory_impl/variants/: g_hybrid.cu  g_hybrid_stress.cu  g_shared.cu  g_shared_stress.cu  g_standard.cu  g_standard_stress.cu  u_hybrid.cu  u_shared.cu  u_standard.cu  u_standard_stress.cu
src/parallel/shared_memory/: shared_memory.cu  shared_memory_loop.cu
src/parallel/stream_compaction/: active_cells_common.h  active_cells_cpu_loop.cu  active_cells_gpu.cu  active_cells_gpu_const_block_number.cu  active_cells_gpu_const_block_number_loop.cu  active_cells_gpu_loop.cu
src/parallel/unified_memory/: u_common.cu  u_hybrid.cu  u_hybrid_loop.cu  u_shared.cu  u_shared_stress.cu  u_standard.cu  unified_memory.cu  unified_memory_common.h  unified_memory_loop.cu
src/parallel/utils/: cuda_error_check.cuh  memory_management.cu  memory_management.cuh  statistics.cpp  statistics.h  timer.cpp  timer.h
src/river/: river_run.sh  river_unified.cu  river_visualization.py
src/sequential/C/: CMakeLists.txt  sequential_c_imp.c
src/sequential/OpenCAL/: cal_saturatedFlow_oneWell.c
src/sequential/Python/: sequential_python_imp.py
src/visualization_openGL/: App.cpp  params.h
src/visualization_openGL/libs/: glad.c
src/visualization_openGL/shaders/: chart_f.glsl
src/visualization_openGL/utils/: Chart.h  Window.cpp  camera.h  textureLoader.h
tests/: averaging_test.sh  conf.json  model_analyzer.py
visualization/: conf.json
visualization_opengl/: .gitignore  App.cpp  CMakeLists.txt  att_vertex.glsl  fragment.glsl  main.cpp  params.h
visualization_opengl/shaders/: chart_f.glsl  chart_v.glsl
visualization_opengl/utils/: Chart.cpp  Window.cpp  Window.h  camera.h  glfwManager.cpp  glfwManager.h  shader.h
visualization_python/: conf.json  river_run.sh  river_visualization.py
(+544 files in other folders)
